--- a/package.json
+++ b/package.json
@@ -23,14 +23,26 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bad-words": "^3.0.4",
+    "bootstrap": "^4.6.0",
     "clsx": "^1.1.1",
+    "dotenv": "^8.2.0",
     "mysql2": "^2.2.5",
     "next": "^10.0.7",
     "next-auth": "latest",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "serverless-mysql": "^1.5.4",
     "sqlite3": "^5.0.2",
     "swr": "^0.5.5"
+  },
+  "devDependencies": {
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
