--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "migrate": "node scripts/migrate-db.js"
+    "migrate": "node scripts/migrate-db.js",
+    "migrate-model-tables": "node scripts/create-model-tables-next-auth.js"
   },
   "author": "Iain Collins <me@iaincollins.com>",
   "contributors": [
